--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="https://github.com/TestingAcount15/htgfg/blob/main/double-ditto.apk" download>Click here to download the APK</a
+<a href="https://github.com/TestingAcount15/htgfg/raw/main/double-ditto.apk" download>Click here to download the APK</a>
