--- a/index.html
+++ b/index.html
@@ -1,1 +1,89 @@
-<a href="https://github.com/TestingAcount15/htgfg/raw/main/double-ditto.apk" download>Click here to download the APK</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Download APK</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background: #121212; 
+            color: #fff;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+            flex-direction: column;
+        }
+
+        .container {
+            max-width: 100%;
+            padding: 20px;
+            box-sizing: border-box;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 30px;
+            margin-bottom: 30px;
+            color: #e53935;
+            letter-spacing: 1px;
+            font-weight: 600;
+        }
+
+        .download-button {
+            background-color: #e53935;
+            color: #fff;
+            padding: 20px 40px;
+            font-size: 18px;
+            text-decoration: none;
+            border-radius: 50px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            display: inline-block;
+            transition: background-color 0.3s, transform 0.3s;
+            text-transform: uppercase;
+        }
+
+        .download-button:hover {
+            background-color: #d32f2f;
+            transform: scale(1.05);
+        }
+
+        .download-button:active {
+            transform: scale(1);
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+        }
+
+        @media screen and (max-width: 600px) {
+            h1 {
+                font-size: 26px;
+            }
+
+            .download-button {
+                font-size: 16px;
+                padding: 16px 30px;
+            }
+        }
+
+        @media screen and (min-width: 768px) {
+            .container {
+                width: 80%;
+                max-width: 600px;
+            }
+
+            h1 {
+                font-size: 36px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Download Double Ditto Game</h1>
+        <a href="https://github.com/TestingAcount15/htgfg/raw/main/double-ditto.apk" class="download-button" download>Click here to download</a>
+    </div>
+</body>
+</html>
