--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download Double Ditto Scoring Sheet</title>
+    <title>Double Ditto Scoring Sheet</title>
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/1204623503169556520/1307569202407804939/pic3435888.png?ex=673ac837&is=673976b7&hm=969e18b993958d11b294ec451563d0f8c07fed936190bfe530ea116bb88efd4a&" type="image/png">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #000000, #2c2c2c); 
+            background: linear-gradient(135deg, #121212, #1c1c1c);
+            background-size: 200% 200%;
+            animation: backgroundAnimation 5s ease infinite;
             color: #fff;
             margin: 0;
             padding: 0;
@@ -18,104 +22,125 @@
             text-align: center;
             flex-direction: column;
             overflow: hidden;
-            animation: fadeInPage 2s ease-out;
+            animation: fadeInPage 1.5s ease-out;
         }
+
+        @keyframes backgroundAnimation {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
         .container {
-            max-width: 100%;
-            padding: 20px;
+            width: 100%;
+            max-width: 600px;
+            padding: 40px;
             box-sizing: border-box;
             text-align: center;
-            animation: slideUp 1.5s ease-out;
+            background: rgba(0, 0, 0, 0.6);
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+            animation: slideUp 1s ease-out;
         }
+
+        @keyframes fadeInPage {
+            0% { opacity: 0; transform: translateY(50px); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
+
+        @keyframes slideUp {
+            0% { opacity: 0; transform: translateY(30px); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
+
         h1 {
-            font-size: 45px;
-            margin-bottom: 40px;
-            color: #ff1744;
-            letter-spacing: 3px;
+            font-size: 40px;
+            margin-bottom: 30px;
+            color: #f44336;
             font-weight: 600;
-            text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.7);
-            transition: transform 0.4s ease;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+            text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+            transition: transform 0.3s ease, color 0.3s ease;
+            font-family: 'Poppins', sans-serif;
         }
+
         h1:hover {
-            transform: translateY(-10px) scale(1.05);
-            color: #ff4081;
+            transform: translateY(-10px);
+            color: #ff5722;
         }
+
         .download-button {
-            background-color: #ff1744;
+            background-color: #f44336;
             color: #fff;
-            padding: 20px 40px;
+            padding: 18px 40px;
             font-size: 18px;
             text-decoration: none;
             border-radius: 50px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
             display: inline-block;
             text-transform: uppercase;
-            letter-spacing: 2px;
+            font-weight: bold;
+            letter-spacing: 1px;
             cursor: pointer;
             position: relative;
             transition: all 0.3s ease;
         }
+
         .download-button:hover {
-            background-color: #d50000;
-            transform: scale(1.1) rotate(3deg);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+            background-color: #d32f2f;
+            transform: scale(1.05);
+            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.4);
         }
+
         .download-button:active {
-        transform: scale(1) rotate(0);
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            transform: scale(1) rotate(2deg);
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
         }
+
         .download-button:before {
-        content: '⏳';
-        position: absolute;
-        top: -10px;
-        right: -10px;
-        font-size: 32px;
-        opacity: 0;
-        transition: opacity 0.3s ease;
+            content: '⏳';
+            position: absolute;
+            top: -10px;
+            right: -10px;
+            font-size: 24px;
+            opacity: 0;
+            transition: opacity 0.3s ease;
         }
+
         .download-button:hover:before {
-        opacity: 1;
-        animation: spin 1.5s infinite;
+            opacity: 1;
+            animation: spin 1.5s infinite linear;
         }
 
-      @keyframes spin {
-         0% { transform: rotate(0deg); }
-         100% { transform: rotate(360deg); }
-      }
-     @keyframes fadeInPage {
-        0% { opacity: 0; transform: translateY(50px); }
-       100% { opacity: 1; transform: translateY(0); }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
 
-    @keyframes slideUp {
-        0% { opacity: 0; transform: translateY(30px); }
-      100% { opacity: 1; transform: translateY(0); }
+        @media screen and (max-width: 600px) {
+            h1 {
+                font-size: 28px;
+            }
+
+            .download-button {
+                font-size: 16px;
+                padding: 14px 30px;
+            }
         }
-     @media screen and (max-width: 600px) {
-         h1 {
-         font-size: 32px;
+
+        @media screen and (min-width: 768px) {
+            h1 {
+                font-size: 45px;
+            }
         }
-    .download-button {
-    font-size: 16px;
-     padding: 18px 35px;
-    }
-}
- @media screen and (min-width: 768px) {
-      .container {
-          width: 80%;
-            max-width: 600px;
-         }
-          h1 {
-          font-size: 50px;
-         }
-    }
 
     </style>
 </head>
 <body>
-<div class="container">
-<h1>Download Double Ditto Scoring Sheet</h1>
-<a href="https://github.com/TestingAcount15/htgfg/raw/main/double-ditto.apk" class="download-button" download>Click to Download</a>
-</div>
+    <div class="container">
+        <h1>Download Double Ditto Scoring Sheet</h1>
+        <a href="https://github.com/TestingAcount15/htgfg/raw/main/double-ditto.apk" class="download-button" download>Click to Download</a>
+    </div>
 </body>
 </html>
